finishing components/sidebar.html and updating base.html and index.html

--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -1,5 +1,6 @@
 {% extends  "base.html" %}
 
 {% block content %}
+{% include '../components/topbar.html' %}
 <a href="{% url 'upload' %}">Upload file</a>
 {% endblock %}
