--- a/app/home/templates/base.html
+++ b/app/home/templates/base.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1"
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
     {% load static %}
     <title>Blog</title>
+    <!-- favicon -->
     <link
       rel="icon"
       type="image/x-icon"
@@ -25,31 +26,42 @@
       src="https://kit.fontawesome.com/f1f3600fd5.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,700;0,800;1,200;1,700;1,800"
+    rel="stylesheet1">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+
+    <!-- bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- Personnal themes CSS -->
+    <link href="{% static 'assets/css/base.css' %}" rel="stylesheet" type="text/css"/>
+
+
+
   </head>
   <body>
-    <div class="container" 
-      style="height: 17%;width: 100%;margin: 0;padding: 2px;background-color: var(--bs-blue);
-      display: flex;align-content: space-evenly;align-items: center;">
-      <img src="{% static 'assets/img/slb.png' %}" 
-        style="width: 10%;height: auto;
-        ;padding: 2px;" />
-        <i class="fas fa-code fa-solid fa-code" style="font-size: 30px;color: var(--bs-teal);padding: 10px;"></i>
-        <h1 style="padding: 20px;font-family: monospace;">Dev Blog : one more</h1>
-        <i class="fas fa-code fa-solid fa-code" style="font-size: 30px;color: var(--bs-teal);padding: 10px;"></i>
-    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    {% include './components/sidebar.html' %}
+
     {% block content %} {% endblock %}
     <footer>
       <!-- Bootstrap core JS-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="{% static 'assets/js/blog.js' %}"></script>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
+    crossorigin="anonymous"></script>
   </body>
 </div>
 </html>
