--- a/app/home/templates/components/sidebar.html
+++ b/app/home/templates/components/sidebar.html
@@ -1,9 +1,9 @@
 {% load static %}
 {% load home_extras %}
-<!-- Vertical navbar -->
-<div class="d-flex flex-column vertical-nav justify-content-between" id="sidebar">
+<!-- vertical-nav -->
+<div class="d-flex flex-column justify-content-between vertical-nav">
 
-    <div class="top-bar text-center">
+    <div class="top-sidebar text-center">
 
       <div class="blog_title text-start">Another dev,</div>
       <div class="blog_title text-end">Another blog.</div>
@@ -84,7 +84,7 @@
     </div>
   
 </div>
-  <!-- End vertical navbar -->
+  <!-- End vertical-nav -->
   
  
     <!-- Toggle button -->
