--- a/app/home/static/assets/css/_sidebar.scss
+++ b/app/home/static/assets/css/_sidebar.scss
@@ -8,9 +8,8 @@
     background-color: #1EAE98;
     padding-bottom:0.2em;
     padding-bottom:0.2em;
-  }
   
-  .top-bar {
+  .top-sidebar {
     font-weight: extrabold;
     
     .identity{
@@ -37,43 +36,50 @@
       padding-right:0.1em;
       // margin-bottom:0.5em;
     }
-  }  
-
-.navigation{
-  font-family: "Ubuntu Mono", monospace;
-  font-size: 1em;
-  font-weight: extrabold;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  margin-top:1em;
-  margin-bottom:1em;
-  background-color: #1ebba3;
-  // border-radius: 30%;
-  width:75%;
-
-  .nav-link {
-    width:100%;
   }
-  .nav-link:hover{
-    background-color: #1EAE98;
+  
+  .navigation{
+    font-family: "Ubuntu Mono", monospace;
+    font-size: 1em;
+    font-weight: extrabold;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    margin-top:1em;
+    margin-bottom:1em;
+    background-color: #1ebba3;
+    // border-radius: 30%;
+    width:75%;
+
+    .nav-link {
+      width:100%;
+    }
+    .nav-link:hover{
+      background-color: #1EAE98;
+    }
+
+    i {
+      width:20%;
+      padding-right:2em;
+      width:1em;
+    }
+
+    .menu{
+      width:60%;
+    }
+  }
+    
+  .contact{
+    
+    .btn-lg {
+      border-radius: 50%;
+      border: 0.5px solid #1ebba3;
+    }
+
   }
 
-  i {
-    width:20%;
-    padding-right:2em;
-    width:1em;
-  }
-
-  .menu{
-    width:60%;
-  }
-}
+}  
 
 
-.btn-lg {
-  border-radius: 50%;
-  border: 0.5px solid #1ebba3;
-}
 
 
 
