--- a/app/home/static/assets/css/base.scss
+++ b/app/home/static/assets/css/base.scss
@@ -1,4 +1,9 @@
 @import"./sidebar";
 @import"./topbar";
+@import"./topbar_index";
+@import"./topbar_article";
+@import"./topbar_category";
+@import"./topbar_tuto";
+@import"./topbar_oops";
 @import"./content";
 
