--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<!-- Masthead-->
-<header class="masthead">
-  <div class="container px-4 px-lg-5 h-100">
+{% include 'components/topbar.html' with topclass='top_login' %}
+
+  <div class="container px-4 px-lg-5 h-100 login_form">
     <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-8 align-self-center">
         <h2 class="text-white font-weight-bold">Connection à mon compte</h2>
@@ -64,5 +64,4 @@
       </div>
     </div>
   </div>
-</header>
 {% endblock %}
