--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -1,4 +1,6 @@
 {% extends  "base.html" %}
+
 {% block content %}
-{% include 'components/topbar.html' with topclass='top_index'%}
+{% include '../components/topbar.html' %}
+<a href="{% url 'upload' %}">Upload file</a>
 {% endblock %}
