--- a/app/home/static/assets/css/base.css
+++ b/app/home/static/assets/css/base.css
@@ -18,8 +18,6 @@
 }
 .vertical-nav .top-sidebar .avatar {
   padding: 0.1em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
 }
 .vertical-nav .top-sidebar .blog_title {
   font-family: "Cedarville Cursive", cursive;
@@ -48,23 +46,8 @@
 .vertical-nav .navigation .nav-link {
   width: 100%;
 }
-.vertical-nav .navigation i,
-.vertical-nav .navigation .menu,
-.vertical-nav .navigation .details {
-  color: black;
-}
-.vertical-nav .navigation .nav-link:hover i,
-.vertical-nav .navigation .nav-link:hover .menu,
-.vertical-nav .navigation .nav-link:hover .details {
-  color: rgb(7, 252, 11);
-}
 .vertical-nav .navigation .nav-link:hover {
   background-color: #1EAE98;
-}
-.vertical-nav .navigation .enlighted .nav-link i,
-.vertical-nav .navigation .enlighted .nav-link .menu,
-.vertical-nav .navigation .enlighted .nav-link .details {
-  color: rgb(243, 247, 8);
 }
 .vertical-nav .navigation i {
   width: 20%;
@@ -74,41 +57,18 @@
 .vertical-nav .navigation .menu {
   width: 60%;
 }
-
-.vertical-nav > .contact > .btn {
+.vertical-nav .contact .btn-lg {
   border-radius: 50%;
+  border: 0.5px solid #1ebba3;
 }
 
 .topbar {
-  background-color: #defbf7;
+  background-color: rgb(250, 248, 248);
   width: 82%;
   left: 18%;
   top: 0;
   position: fixed;
   font-family: "Source Code Pro", monospace;
   padding-top: 2em;
-  padding-bottom: 1em;
-}
-.topbar .userlog {
-  padding-right: 3.5em;
-}
-.topbar .userlog .nav-link {
-  padding-top: 1.5em;
-}
-.topbar .userlog .nav-link i {
-  padding-right: 0.2em;
-  color: black;
-}
-.topbar .userlog .nav-link .menu {
-  color: black;
-}
-.topbar .userlog .nav-link:hover i,
-.topbar .userlog .nav-link:hover .menu {
-  color: red;
-}
-
-.login_form {
-  top: 10%;
-  position: absolute;
-  left: 20%;
+  padding-bottom: 2em;
 }/*# sourceMappingURL=base.css.map */
