--- a/app/home/templates/base.html
+++ b/app/home/templates/base.html
@@ -40,32 +40,28 @@
     rel="stylesheet">
 
     <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- Personnal themes CSS -->
     <link href="{% static 'assets/css/base.css' %}" rel="stylesheet" type="text/css"/>
 
-    <link href="{% static 'assets/css/dark-mode.css' %}" rel="stylesheet"/>
+
 
   </head>
   <body>
 
-    {% include 'components/sidebar.html' %}
-
+    {% include './components/sidebar.html' %}
 
     {% block content %} {% endblock %}
     <footer>
+      <!-- Bootstrap core JS-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="{% static 'assets/js/blog.js' %}"></script>
     </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
     crossorigin="anonymous"></script>
-    <script src="{% static 'assets/js/blog.js' %}"></script>
-    <script src="{% static 'assets/js/dark-mode-switch.js' %}"></script>
   </body>
 </div>
 </html>
