--- a/app/templates/components/topbar.html
+++ b/app/templates/components/topbar.html
@@ -1,8 +1,8 @@
-<section class="theme-bg-light topbar {{ topclass }}">
+<section class="container topbar {{ topclass }}">
 
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="darkSwitch">
-        <label class="form-check-label" for="darkSwitch">Dark Mode</label>
+    <div class="form-check form-switch container-fluid d-flex justify-content-end">
+        <input class="form-check-input ckecker flex-item" type="checkbox" role="switch" id="darkSwitch">
+        <label class="form-check-label" for="darkSwitch">Mode Sombre</label>
     </div>
     
     {% if topclass == "top_index" %}
