--- a/app/templates/components/user_log.html
+++ b/app/templates/components/user_log.html
@@ -1,8 +1,7 @@
 <div class="userlog container-fluid d-flex justify-content-end">
+    <div>
+        {% if not user.is_authenticated %}
 
-    {% if not user.is_authenticated %}
-
-        <div>
             <a class="nav-link text-dark font-italic d-inline-flex align-self-start align-items-center" 
                 href="" role="button">
                 <i class="fa-solid fa-user-plus"></i>
@@ -13,17 +12,14 @@
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
                 <div class="menu">Connexion</div>
             </a>
-        </div>
 
-    {% else %}
+        {% else %}
 
-        <div class="d-inline-flex justify-content-start">
-            <a class="nav-link text-dark font-italic d-inline-flex" 
+            <a class="nav-link text-dark font-italic d-inline-flex align-self-start align-items-center" 
                 href="{% url 'logout' %}" role="button">
                 <i class="fa-solid fa-arrow-right-from-bracket"></i>
                 <div class="menu">Déconnexion</div>
             </a>
-        </div>
-    {% endif %}
-
+        {% endif %}
+    </div>
 </div>
