--- a/app/home/static/assets/css/_topbar.scss
+++ b/app/home/static/assets/css/_topbar.scss
@@ -2,18 +2,21 @@
     background-color: #defbf7;
     width:82%;
     left: 18%;
-    top:0;
+    top:0%;
     position:fixed;
     font-family:"Source Code Pro", monospace;
-    padding-top: 2em;
+    padding-top: 1em;
     padding-bottom:1em;
+    height:fit-content;
 
-    .userlog {
-        padding-right:3.5em;
+    .form-check .form-check-label {
+        padding-left: 0.3em;
+        font-family: 'Ubuntu Mono', monospace;
     }
 
     .userlog .nav-link{
-        padding-top:1.5em;
+        padding-top:1em;
+        border-bottom: solid 1px black;
     }
 
     .userlog .nav-link i {
@@ -26,7 +29,10 @@
       }
 
     .userlog .nav-link:hover i,
-    .userlog .nav-link:hover .menu {
+    .userlog .nav-link:hover .menu,
+    .userlog .nav-link:hover {
         color:red;
+        border-color: red;
     }
+
 }
