--- a/app/home/static/assets/css/base.css
+++ b/app/home/static/assets/css/base.css
@@ -83,17 +83,22 @@
   background-color: #defbf7;
   width: 82%;
   left: 18%;
-  top: 0;
+  top: 0%;
   position: fixed;
   font-family: "Source Code Pro", monospace;
-  padding-top: 2em;
+  padding-top: 1em;
   padding-bottom: 1em;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
-.topbar .userlog {
-  padding-right: 3.5em;
+.topbar .form-check .form-check-label {
+  padding-left: 0.3em;
+  font-family: "Ubuntu Mono", monospace;
 }
 .topbar .userlog .nav-link {
-  padding-top: 1.5em;
+  padding-top: 1em;
+  border-bottom: solid 1px black;
 }
 .topbar .userlog .nav-link i {
   padding-right: 0.2em;
@@ -103,8 +108,10 @@
   color: black;
 }
 .topbar .userlog .nav-link:hover i,
-.topbar .userlog .nav-link:hover .menu {
+.topbar .userlog .nav-link:hover .menu,
+.topbar .userlog .nav-link:hover {
   color: red;
+  border-color: red;
 }
 
 .login_form {
