--- a/app/templates/components/topbar.html
+++ b/app/templates/components/topbar.html
@@ -64,7 +64,10 @@
         <h2 class="heading">Crée un compte pour recevoir l'annonce des derniers posts et participer aux commentaires.</h2>
     </div>
 
+    {% elif topclass == 'top_upload' %}
 
+    <div class="container text-center title_section">
+        <h2 class="heading">Sélectionne un fichier Markdown pour le transformer en article.</h2>
     
     {% endif %}
 
