--- a/app/factory/templates/factory/md_upload.html
+++ b/app/factory/templates/factory/md_upload.html
@@ -2,6 +2,8 @@
 {% block content %}
 {% include '../components/topbar.html' with topclass='top_upload'%}
 
+<div class="container">
+
     <form action="{% url 'upload' %}"
         method = "POST"
         enctype="multipart/form-data">
@@ -14,4 +16,5 @@
         <p>File uploaded at: <a href="{{ url }}">{{ url }}</a></p>
     {% endif %}
 
+</div>
 {% endblock %}
