removing bootstrap reference and refactoring sidebar

--- a/app/home/static/assets/css/_content.scss
+++ b/app/home/static/assets/css/_content.scss
@@ -1,5 +1,21 @@
-.login_form{
-  top:10%;
-  position:absolute;
-  left:20%
+.content{
+  padding-left:5%;
+  padding-right:5%;
+}
+
+.form-control {
+  background-color: #defbf7!important;
+}
+
+.btn-primary {
+  background-color: #233E8B!important;
+}
+
+.btn-primary:hover{
+  background-color: #4561b0!important;
+}
+
+.prettyprint {
+  font-size: large;
+  background-color: rgb(220, 208, 208);
 }
