--- a/app/home/static/assets/css/_topbar.scss
+++ b/app/home/static/assets/css/_topbar.scss
@@ -1,18 +1,27 @@
 .topbar {
+    // left:280px;
+    // width: calc(100% - 280px);
     background-color: #defbf7;
-    max-width: 100%;
-    width:82%;
-    left: 18%;
-    top:0%;
-    position:fixed;
     font-family:"Source Code Pro", monospace;
+    padding-left:0.5em;
+    padding-right:0.5em;
     padding-top: 1em;
     padding-bottom:1em;
-    height:fit-content;
+    opacity:0.8;
 
     .form-check .form-check-label {
         padding-left: 0.3em;
         font-family: 'Ubuntu Mono', monospace;
+    }
+
+    .userlog{
+        display:flex;
+        width: 100%;
+        justify-content:end;
+    }
+
+    .userlog a {
+        margin-left:1em;
     }
 
     .userlog .nav-link{
