--- a/app/home/templates/home/article.html
+++ b/app/home/templates/home/article.html
@@ -1,4 +1,13 @@
 {% extends  "base.html" %}
 {% block content %}
-{% include 'components/topbar.html' with topclass='top_article'%}
+ <pre class="prettyprint lang-py">
+  class NewClass(object):
+    def __init__(self, value):
+      self.value = value
+    def get_value(self):
+      return self.value
+    def set_value(self, value):
+      self.value = value
+    value = property(get_value, set_value)
+ </pre>
 {% endblock %}
