--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Blog site" />
+    <meta name="author" content="Stéphane LE BOURGEOIS" />
     {% load static %}
     <title>Blog</title>
     <!-- favicon -->
@@ -15,11 +15,6 @@
       rel="icon"
       type="image/x-icon"
       href="{% static 'assets/img/favicon.ico' %}"
-    />
-    <!-- Bootstrap Icons-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-      rel="stylesheet"
     />
     <!-- Fontawesome Icons-->
     <script
@@ -38,10 +33,6 @@
     rel="stylesheet1">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
-
-    <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
     <!-- Personnal themes CSS -->
     <link href="{% static 'assets/css/base.css' %}" rel="stylesheet" type="text/css"/>
 
@@ -50,9 +41,11 @@
     {% load static %}
   <style>
     body {
-      background-image: url("{% static 'assets/img/background.jpg' %}");
-      background-size: cover;
-      background
+      display:flex;
+      padding:0;
+      margin:0;
+      background-color:bisque;
+      overflow-y: hidden;
     }
   </style>
 
@@ -60,10 +53,12 @@
   <body>
 
     {% include 'components/sidebar.html' %}
-    {% include 'components/topbar.html' %}
+    <div class="central">
+      {% include 'components/topbar.html' %}
     
-    <div class="content d-flex justify-content-start align-items-center">
-      {% block content %} {% endblock %}
+      <div class="content">
+       {% block content %} {% endblock %}
+      </div>
     </div>
     
     <footer>
@@ -72,13 +67,8 @@
     src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
     integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
     crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
     <script src="{% static 'assets/js/blog.js' %}"></script>
     <script src="{% static 'assets/js/dark-mode-switch.js' %}"></script>
   </body>
-</div>
 </html>
