--- a/app/home/templates/home/tuto_list.html
+++ b/app/home/templates/home/tuto_list.html
@@ -1,15 +1,12 @@
 {% extends  "base.html" %}
-{% load static%}
-{% load category_extras %}
 {% block content %}
 <div class="content">
   <div class="categories">
     {% for element in result %}
     <div class="container">
-      <a href="{% url 'article' element.title %}">
-        <div class="category">{{ element.title }}</div>
-      </a>
+      <a href="{% url 'tuto' element.title %}"
+      <div class="category">{{ element.title }}</div>
+      <div class="category">{{ element.template }}</div>
     {% endfor %}
-  </div>
-</div>
+</div> 
 {% endblock %}
