--- a/app/home/templates/home/category_list.html
+++ b/app/home/templates/home/category_list.html
@@ -6,9 +6,11 @@
   <div class="categories">
     {% for element in result %}
     <div class="container">
-      <a href="{% url 'article' element.title %}">
-        <div class="category">{{ element.title }}</div>
+      <a href="{% url 'category' element.category %}">
+        <img src="{% static 'assets/img/' %}{{element.pic}}">
+        <div class="category">{{ element.category }} {% categories element.category %}</div>
       </a>
+    </div>
     {% endfor %}
   </div>
 </div>
